# duel-framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY_AUDIT.md  __init__.py  autonomous.py  benchmark.py  campaign.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  run_all.py  server.py  tournament.py
.github/workflows/: publish.yml  weekly-duel.yml
agents/: attacker.py  defender.py
docs/: _config.yml  data.json  index.html  medium_article.md  paper.md
engine/: attacker_dna.py  attacker_memory.py  autonomous_attacker.py  constitution.py  dabs_scorer.py  dataset_generator.py  defender_memory.py  detection.py  groq_client.py  historical_analysis.py  injection_detector.py  llm_detection.py  meta_attacker.py  multi_attacker.py  replay_engine.py  report_generator.py  scaling_laws.py  scoring.py  sentinel_export.py  sigma_export.py  swarm_memory.py  test_detection.py  threat_intel.py  tournament_scorer.py
output/dataset/: README.md  test.jsonl  test.parquet  train.jsonl  train.parquet  validation.jsonl  validation.parquet
output/sigma/: LLM01_round1.yml  LLM01_round2.yml  LLM01_round3.yml  LLM02_round1.yml  LLM02_round2.yml  LLM02_round3.yml  LLM03_round1.yml  LLM03_round2.yml  LLM03_round3.yml  LLM04_round1.yml  LLM04_round2.yml  LLM04_round3.yml  LLM05_round1.yml  LLM05_round2.yml  LLM05_round3.yml  LLM06_round1.yml  LLM06_round2.yml  LLM06_round3.yml  LLM07_round1.yml  LLM07_round2.yml  LLM07_round3.yml  LLM08_round1.yml  LLM08_round2.yml  LLM08_round3.yml  LLM09_round1.yml  LLM09_round2.yml  LLM09_round3.yml  LLM10_round1.yml  LLM10_round2.yml  LLM10_round3.yml  T1078.001_round2.yml  T1078.001_round3.yml  T1078.004_round3.yml  T1087.004_round2.yml  T1087.004_round3.yml  T1098.001_round1.yml  T1098.001_round3.yml  T1110.003_round3.yml  T1114.002_round1.yml  T1133_round1.yml  (+24 more)
scripts/: export_dataset.py  generate_pages_data.py  generate_paper_pdf.py  run_scaling_benchmark.py  weekly_battle.py
static/: autonomous.html  benchmark.html  campaign.html  dna.html  export.html  heatmap.html  history.html  index.html  mcp.html  scaling.html  tournament.html
techniques/: T1018.json  T1040.json  T1069.003.json  T1078.001.json  T1078.004.json  T1087.004.json  T1098.001.json  T1110.003.json  T1114.002.json  T1133.json  T1136.003.json  T1190.json  T1199.json  T1485.json  T1486.json  T1526.json  T1528.json  T1530.json  T1537.json  T1550.001.json  T1556.006.json  T1562.001.json  T1566.001.json  T1566.002.json  T1567.002.json  T1606.002.json  T1621.json  T1648.json
techniques/llm/: LLM01.json  LLM02.json  LLM03.json  LLM04.json  LLM05.json  LLM06.json  LLM07.json  LLM08.json  LLM09.json  LLM10.json
